--- a/src/CasinovaAll/Specs/TheS.Casinova.PlayerProfile.BackServices.Specs/TheS.Casinova.PlayerProfile.BackServices.Specs.csproj
+++ b/src/CasinovaAll/Specs/TheS.Casinova.PlayerProfile.BackServices.Specs/TheS.Casinova.PlayerProfile.BackServices.Specs.csproj
@@ -50,6 +50,40 @@
   <ItemGroup>
     <Folder Include="BackServices\Specs\" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Modules\Chat\TheS.Casinova.Chat.BackProviders\TheS.Casinova.Chat.BackProviders.csproj">
+      <Project>{5774B6A6-ACF2-43BB-B58B-059D75DEFFC6}</Project>
+      <Name>TheS.Casinova.Chat.BackProviders</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Modules\PlayerProfile\TheS.Casinova.PlayerProfile.BackServices.Contracts\TheS.Casinova.PlayerProfile.BackServices.Contracts.csproj">
+      <Project>{E27F1E2B-59E2-497F-B963-F6E52BAA5442}</Project>
+      <Name>TheS.Casinova.PlayerProfile.BackServices.Contracts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Modules\PlayerProfile\TheS.Casinova.PlayerProfile.BackServices\TheS.Casinova.PlayerProfile.BackServices.csproj">
+      <Project>{3915E024-CC99-4BBD-A79D-1E9D25CF850B}</Project>
+      <Name>TheS.Casinova.PlayerProfile.BackServices</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Modules\PlayerProfile\TheS.Casinova.PlayerProfile.Commands\TheS.Casinova.PlayerProfile.Commands.csproj">
+      <Project>{E1364683-30DC-4225-8185-991D5DDF4F3A}</Project>
+      <Name>TheS.Casinova.PlayerProfile.Commands</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Modules\PlayerProfile\TheS.Casinova.PlayerProfile.DAL.BackContracts\TheS.Casinova.PlayerProfile.DAL.BackContracts.csproj">
+      <Project>{34C38EA2-A49F-4B50-8909-A1A32848A72C}</Project>
+      <Name>TheS.Casinova.PlayerProfile.DAL.BackContracts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Modules\PlayerProfile\TheS.Casinova.PlayerProfile.Models\TheS.Casinova.PlayerProfile.Models.csproj">
+      <Project>{96BBA83F-EAA6-4EEA-BEC5-98F6AC39B943}</Project>
+      <Name>TheS.Casinova.PlayerProfile.Models</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Modules\Shared\TheS.Casinova.Common.Commands\TheS.Casinova.Common.Commands.csproj">
+      <Project>{B0BA601A-7B65-4973-9E00-4F9035883877}</Project>
+      <Name>TheS.Casinova.Common.Commands</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Modules\Shared\TheS.Casinova.Common.Models\TheS.Casinova.Common.Models.csproj">
+      <Project>{6079CFCD-811A-4962-B021-8D3D14C0C45B}</Project>
+      <Name>TheS.Casinova.Common.Models</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
