--- a/src/CasinovaAll/Specs/TheS.Casinova.Colors.BackServices.Specs/TheS.Casinova.Colors.BackServices.Specs.csproj
+++ b/src/CasinovaAll/Specs/TheS.Casinova.Colors.BackServices.Specs/TheS.Casinova.Colors.BackServices.Specs.csproj
@@ -48,6 +48,36 @@
     <Compile Include="BackServices\Specs\UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Modules\Colors\TheS.Casinova.Colors.BackServices.Contracts\TheS.Casinova.Colors.BackServices.Contracts.csproj">
+      <Project>{886E0C88-2499-4DA9-98E2-253BDC0ABE5B}</Project>
+      <Name>TheS.Casinova.Colors.BackServices.Contracts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Modules\Colors\TheS.Casinova.Colors.BackServices\TheS.Casinova.Colors.BackServices.csproj">
+      <Project>{2D3ECC97-9634-412B-A816-7B5883718E14}</Project>
+      <Name>TheS.Casinova.Colors.BackServices</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Modules\Colors\TheS.Casinova.Colors.Commands\TheS.Casinova.Colors.Commands.csproj">
+      <Project>{D96B565C-21E4-4D24-9084-B4E5B89A8AB4}</Project>
+      <Name>TheS.Casinova.Colors.Commands</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Modules\Colors\TheS.Casinova.Colors.DAL.BackContracts\TheS.Casinova.Colors.DAL.BackContracts.csproj">
+      <Project>{2067437F-0A3B-4806-BD90-4C389E863800}</Project>
+      <Name>TheS.Casinova.Colors.DAL.BackContracts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Modules\Colors\TheS.Casinova.Colors.Models\TheS.Casinova.Colors.Models.csproj">
+      <Project>{D6D472FB-4D74-4852-A0C7-AF4558B46C29}</Project>
+      <Name>TheS.Casinova.Colors.Models</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Modules\Shared\TheS.Casinova.Common.Commands\TheS.Casinova.Common.Commands.csproj">
+      <Project>{B0BA601A-7B65-4973-9E00-4F9035883877}</Project>
+      <Name>TheS.Casinova.Common.Commands</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Modules\Shared\TheS.Casinova.Common.Models\TheS.Casinova.Common.Models.csproj">
+      <Project>{6079CFCD-811A-4962-B021-8D3D14C0C45B}</Project>
+      <Name>TheS.Casinova.Common.Models</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
