--- a/src/CasinovaAll/Specs/TheS.Casinova.Fortune.WebExecutors.Specs/TheS.Casinova.Fortune.WebExecutors.Specs.csproj
+++ b/src/CasinovaAll/Specs/TheS.Casinova.Fortune.WebExecutors.Specs/TheS.Casinova.Fortune.WebExecutors.Specs.csproj
@@ -50,6 +50,40 @@
   <ItemGroup>
     <Folder Include="WebExecutors\Specs\" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Modules\Chat\TheS.Casinova.Chat.BackProviders\TheS.Casinova.Chat.BackProviders.csproj">
+      <Project>{5774B6A6-ACF2-43BB-B58B-059D75DEFFC6}</Project>
+      <Name>TheS.Casinova.Chat.BackProviders</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Modules\Fortune\TheS.Casinova.Fortune.BackServices.Contracts\TheS.Casinova.Fortune.BackServices.Contracts.csproj">
+      <Project>{06112527-F9DF-4B9B-A4A2-BEA6B6EE7BBD}</Project>
+      <Name>TheS.Casinova.Fortune.BackServices.Contracts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Modules\Fortune\TheS.Casinova.Fortune.Commands\TheS.Casinova.Fortune.Commands.csproj">
+      <Project>{71057C2C-A179-494B-90A2-E67AB19AF2EA}</Project>
+      <Name>TheS.Casinova.Fortune.Commands</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Modules\Fortune\TheS.Casinova.Fortune.DAL.Contracts\TheS.Casinova.Fortune.DAL.Contracts.csproj">
+      <Project>{2D532D04-0CE4-4288-BCD0-BB5EF2F8F011}</Project>
+      <Name>TheS.Casinova.Fortune.DAL.Contracts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Modules\Fortune\TheS.Casinova.Fortune.Models\TheS.Casinova.Fortune.Models.csproj">
+      <Project>{76D20D86-35A8-4D0B-87DE-1DC576754DEE}</Project>
+      <Name>TheS.Casinova.Fortune.Models</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Modules\Fortune\TheS.Casinova.Fortune.WebExecutors\TheS.Casinova.Fortune.WebExecutors.csproj">
+      <Project>{41B76222-86A1-41C3-981E-47DBBFD40B56}</Project>
+      <Name>TheS.Casinova.Fortune.WebExecutors</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Modules\Shared\TheS.Casinova.Common.Commands\TheS.Casinova.Common.Commands.csproj">
+      <Project>{B0BA601A-7B65-4973-9E00-4F9035883877}</Project>
+      <Name>TheS.Casinova.Common.Commands</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Modules\Shared\TheS.Casinova.Common.Models\TheS.Casinova.Common.Models.csproj">
+      <Project>{6079CFCD-811A-4962-B021-8D3D14C0C45B}</Project>
+      <Name>TheS.Casinova.Common.Models</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
