--- a/src/CasinovaAll/Specs/TheS.Casinova.MLN.WebExecutors.Specs/TheS.Casinova.MLN.WebExecutors.Specs.csproj
+++ b/src/CasinovaAll/Specs/TheS.Casinova.MLN.WebExecutors.Specs/TheS.Casinova.MLN.WebExecutors.Specs.csproj
@@ -50,6 +50,36 @@
   <ItemGroup>
     <Folder Include="WebExecutors\Specs\" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Modules\MLN\TheS.Casinova.MLN.BackServices.Contracts\TheS.Casinova.MLN.BackServices.Contracts.csproj">
+      <Project>{D8AF34B4-FCC4-40A8-909D-69575D5B1C84}</Project>
+      <Name>TheS.Casinova.MLN.BackServices.Contracts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Modules\MLN\TheS.Casinova.MLN.Commands\TheS.Casinova.MLN.Commands.csproj">
+      <Project>{FDD4C75F-38C3-4D4B-A336-917EB1533541}</Project>
+      <Name>TheS.Casinova.MLN.Commands</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Modules\MLN\TheS.Casinova.MLN.DAL.Contracts\TheS.Casinova.MLN.DAL.Contracts.csproj">
+      <Project>{F5D756BB-A7FE-4BB2-A908-32676F853DEF}</Project>
+      <Name>TheS.Casinova.MLN.DAL.Contracts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Modules\MLN\TheS.Casinova.MLN.Models\TheS.Casinova.MLN.Models.csproj">
+      <Project>{1853A12A-A6BB-4C65-A446-C177C045BC55}</Project>
+      <Name>TheS.Casinova.MLN.Models</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Modules\MLN\TheS.Casinova.MLN.WebExecutors\TheS.Casinova.MLN.WebExecutors.csproj">
+      <Project>{47DD2273-376F-4E3F-81B6-7FBE91E62FC2}</Project>
+      <Name>TheS.Casinova.MLN.WebExecutors</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Modules\Shared\TheS.Casinova.Common.Commands\TheS.Casinova.Common.Commands.csproj">
+      <Project>{B0BA601A-7B65-4973-9E00-4F9035883877}</Project>
+      <Name>TheS.Casinova.Common.Commands</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Modules\Shared\TheS.Casinova.Common.Models\TheS.Casinova.Common.Models.csproj">
+      <Project>{6079CFCD-811A-4962-B021-8D3D14C0C45B}</Project>
+      <Name>TheS.Casinova.Common.Models</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
