--- a/src/CasinovaAll/Modules/Colors/TheS.Casinova.Colors.DAL.Contracts/TheS.Casinova.Colors.DAL.Contracts.csproj
+++ b/src/CasinovaAll/Modules/Colors/TheS.Casinova.Colors.DAL.Contracts/TheS.Casinova.Colors.DAL.Contracts.csproj
@@ -40,11 +40,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DAL\IColorsGameDataQuery.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="DAL\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\..\Shared\TheS.Casinova.Common.Commands\TheS.Casinova.Common.Commands.csproj">
       <Project>{B0BA601A-7B65-4973-9E00-4F9035883877}</Project>
