add IColorsGameDataBackQuery เพิ่ม IGetRoundWinnerQuery ใน IColorsGameDataBackQuery
Signed-off-by: sirinarin <sirinarin@perfenterprise.com>

--- a/src/CasinovaAll/Modules/Colors/TheS.Casinova.Colors.DAL.BackContracts/TheS.Casinova.Colors.DAL.BackContracts.csproj
+++ b/src/CasinovaAll/Modules/Colors/TheS.Casinova.Colors.DAL.BackContracts/TheS.Casinova.Colors.DAL.BackContracts.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DAL\IColorsGameDataAccess.cs" />
+    <Compile Include="DAL\IColorsGameDataBackQuery.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
