create service for test game
Signed-off-by: Sakul Jaruthanaset <miolynet@perfenterprise.com>

--- a/src/CasinovaColors/BlackAndWhite/ColorsGame/ColorsGame.csproj
+++ b/src/CasinovaColors/BlackAndWhite/ColorsGame/ColorsGame.csproj
@@ -101,6 +101,9 @@
     <Compile Include="CreateGameRoundPage.xaml.cs">
       <DependentUpon>CreateGameRoundPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="GamePlayPage.xaml.cs">
+      <DependentUpon>GamePlayPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
@@ -127,6 +130,10 @@
     <Page Include="CreateGameRoundPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="GamePlayPage.xaml">
+      <Generator>MSBuild:MarkupCompilePass1</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="MainPage.xaml">
       <SubType>Designer</SubType>
