--- a/src/CasinovaDevil6/Devil6/Devil6Game.Web/Devil6Game.Web.csproj
+++ b/src/CasinovaDevil6/Devil6/Devil6Game.Web/Devil6Game.Web.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="ClientBin\Devil6Game.xap" />
+    <Content Include="Devil6GameService.asmx" />
     <Content Include="Devil6GameTestPage.aspx" />
     <Content Include="Devil6GameTestPage.html" />
     <Content Include="Silverlight.js" />
@@ -64,6 +65,10 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Devil6GameService.asmx.cs">
+      <DependentUpon>Devil6GameService.asmx</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
