--- a/src/CasinovaAll/Modules/Colors/TheS.Casinova.Colors.Commands/TheS.Casinova.Colors.Commands.csproj
+++ b/src/CasinovaAll/Modules/Colors/TheS.Casinova.Colors.Commands/TheS.Casinova.Colors.Commands.csproj
@@ -41,7 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Commands\BetCommand.cs" />
-    <Compile Include="Commands\GetGamePlayInfoCommand.cs" />
+    <Compile Include="Commands\ListGamePlayInfoCommand.cs" />
     <Compile Include="Commands\PayForColorsWinnerInfoCommand.cs" />
     <Compile Include="Commands\ListActiveGameRoundsCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
