--- a/src/CasinovaAll/Modules/Colors/TheS.Casinova.Colors.WebExecutors/TheS.Casinova.Colors.WebExecutors.csproj
+++ b/src/CasinovaAll/Modules/Colors/TheS.Casinova.Colors.WebExecutors/TheS.Casinova.Colors.WebExecutors.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WebExecutors\ListGamePlayInfoExecutor.cs" />
     <Compile Include="WebExecutors\ListActiveGameRoundsExecutor.cs" />
   </ItemGroup>
   <ItemGroup />
