--- a/src/CasinovaAll/Specs/TheS.Casinova.Colors.WebExecutors.Specs/TheS.Casinova.Colors.WebExecutors.Specs.csproj
+++ b/src/CasinovaAll/Specs/TheS.Casinova.Colors.WebExecutors.Specs/TheS.Casinova.Colors.WebExecutors.Specs.csproj
@@ -40,15 +40,17 @@
     <Reference Include="PerfEx.Infrastructure.Advanced">
       <HintPath>..\..\..\..\lib\PerfEx.Infrastructure.Advanced.dll</HintPath>
     </Reference>
-    <Reference Include="Rhino.Mocks">
-      <HintPath>D:\TheSProject\git\workhorse2\WorkHorse\lib\Rhino.Mocks.dll</HintPath>
+    <Reference Include="Rhino.Mocks, Version=3.6.0.0, Culture=neutral, PublicKeyToken=0b3305902db7183f, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\lib\Rhino.Mocks.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
-    <Reference Include="TechTalk.SpecFlow">
-      <HintPath>..\..\..\..\..\..\..\..\..\..\..\Program Files\TechTalk\SpecFlow\TechTalk.SpecFlow.dll</HintPath>
+    <Reference Include="TechTalk.SpecFlow, Version=1.3.5.2, Culture=neutral, PublicKeyToken=0778194805d6db41, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\lib\TechTalk.SpecFlow.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -64,9 +66,15 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>ListActiveGameRoundsFeature.feature</DependentUpon>
     </Compile>
+    <Compile Include="WebExecutors\Specs\ListGamePlayInfoFeature.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ListGamePlayInfoFeature.feature</DependentUpon>
+    </Compile>
     <Compile Include="WebExecutors\Specs\Steps\CommonSteps.cs" />
     <Compile Include="WebExecutors\Specs\Steps\ListActiveGameRoundsSteps.cs" />
-    <Compile Include="WebExecutors\Specs\Steps\ListActiveGameRoundsStepsBase.cs" />
+    <Compile Include="WebExecutors\Specs\Steps\ColorsGameStepsBase.cs" />
+    <Compile Include="WebExecutors\Specs\Steps\ListGamePlayInfoSteps.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Modules\Colors\TheS.Casinova.Colors.BackServices.Contracts\TheS.Casinova.Colors.BackServices.Contracts.csproj">
@@ -104,6 +112,10 @@
     <None Include="WebExecutors\Specs\ListActiveGameRoundsFeature.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>ListActiveGameRoundsFeature.feature.cs</LastGenOutput>
+    </None>
+    <None Include="WebExecutors\Specs\ListGamePlayInfoFeature.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>ListGamePlayInfoFeature.feature.cs</LastGenOutput>
     </None>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
