--- a/src/CasinovaDevil6/Devil6/Devil6Game/Devil6Game.csproj
+++ b/src/CasinovaDevil6/Devil6/Devil6Game/Devil6Game.csproj
@@ -79,6 +79,8 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\MainPage6666ViewModel.cs" />
+    <Compile Include="ViewModels\MainPage666ViewModel.cs" />
     <Compile Include="ViewModels\MainPage66ViewModel.cs" />
     <Compile Include="ViewModels\MainPageViewModel.cs" />
   </ItemGroup>
