--- a/src/CasinovaAll/Modules/Colors/TheS.Casinova.Colors.WebExecutors/TheS.Casinova.Colors.WebExecutors.csproj
+++ b/src/CasinovaAll/Modules/Colors/TheS.Casinova.Colors.WebExecutors/TheS.Casinova.Colors.WebExecutors.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebExecutors\ListGamePlayInfoExecutor.cs" />
     <Compile Include="WebExecutors\ListActiveGameRoundsExecutor.cs" />
+    <Compile Include="WebExecutors\PayForColorsWinnerInfoExecutor.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
