[Slider range]  - นำตัวอย่างของ style2 ที่เติลทำการแก้ไขมาดัดแปลงให้เป็น style 3
Signed-off-by: Sakul Jaruthanaset <miolynet@perfenterprise.com>

--- a/src/SliderRange/SliderRange/SliderRange.csproj
+++ b/src/SliderRange/SliderRange/SliderRange.csproj
@@ -31,6 +31,8 @@
     <ThrowErrorsInValidation>true</ThrowErrorsInValidation>
     <LinkedServerProject>
     </LinkedServerProject>
+    <Utf8Output>true</Utf8Output>
+    <ExpressionBlendVersion>4.0.20525.0</ExpressionBlendVersion>
   </PropertyGroup>
   <!-- This property group is only here to support building this project using the 
        MSBuild 3.5 toolset. In order to work correctly with this older toolset, it needs 
@@ -82,6 +84,9 @@
     <Compile Include="SliderStyle2.xaml.cs">
       <DependentUpon>SliderStyle2.xaml</DependentUpon>
     </Compile>
+    <Compile Include="SliderStyle3.xaml.cs">
+      <DependentUpon>SliderStyle3.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
@@ -95,6 +100,10 @@
     <Page Include="SliderStyle2.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="SliderStyle3.xaml">
+      <Generator>MSBuild:MarkupCompilePass1</Generator>
+      <SubType>Designer</SubType>
     </Page>
   </ItemGroup>
   <ItemGroup>
