--- a/src/CasinovaAll/Specs/TheS.Casinova.Colors.WebExecutors.Specs/TheS.Casinova.Colors.WebExecutors.Specs.csproj
+++ b/src/CasinovaAll/Specs/TheS.Casinova.Colors.WebExecutors.Specs/TheS.Casinova.Colors.WebExecutors.Specs.csproj
@@ -59,6 +59,11 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebExecutors\SpecsEventDefinitions.cs" />
+    <Compile Include="WebExecutors\Specs\GetGameResultFeature.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>GetGameResultFeature.feature</DependentUpon>
+    </Compile>
     <Compile Include="WebExecutors\Specs\ListActiveGameRoundsFeature.feature.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -75,6 +80,7 @@
       <DependentUpon>PayForColorsWinnerInfoFeature.feature</DependentUpon>
     </Compile>
     <Compile Include="WebExecutors\Specs\Steps\CommonSteps.cs" />
+    <Compile Include="WebExecutors\Specs\Steps\GetGameResultSteps.cs" />
     <Compile Include="WebExecutors\Specs\Steps\ListActiveGameRoundsSteps.cs" />
     <Compile Include="WebExecutors\Specs\Steps\ColorsGameStepsBase.cs" />
     <Compile Include="WebExecutors\Specs\Steps\ListGamePlayInfoSteps.cs" />
@@ -113,6 +119,10 @@
   <ItemGroup />
   <ItemGroup>
     <None Include="WebExecutors\App.config" />
+    <None Include="WebExecutors\Specs\GetGameResultFeature.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>GetGameResultFeature.feature.cs</LastGenOutput>
+    </None>
     <None Include="WebExecutors\Specs\ListActiveGameRoundsFeature.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>ListActiveGameRoundsFeature.feature.cs</LastGenOutput>
