Commit Magic9 Project 04/10/2010 18.28
Signed-off-by: pongsak <pongsak@perfenterprise.com>

--- a/src/CasinovaMagic9/Magic9/Magic9Game/Magic9Game.csproj
+++ b/src/CasinovaMagic9/Magic9/Magic9Game/Magic9Game.csproj
@@ -94,6 +94,7 @@
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
     <Compile Include="ViewModels\MainPageViewModel.cs" />
+    <Compile Include="ViewModels\TimeInterval.cs" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
