แก้ปัญหากรณีเรียกใช้ interface การจัดการฐานข้อมูลที่มี model และ command ซ้ำกัน
Signed-off-by: sirinarin <sirinarin@perfenterprise.com>

--- a/src/CasinovaAll/Modules/Colors/TheS.Casinova.Colors.DAL.BackContracts/TheS.Casinova.Colors.DAL.BackContracts.csproj
+++ b/src/CasinovaAll/Modules/Colors/TheS.Casinova.Colors.DAL.BackContracts/TheS.Casinova.Colors.DAL.BackContracts.csproj
@@ -46,6 +46,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands\UpdateOnGoingTrackingIDCommand.cs" />
+    <Compile Include="Commands\UpdateRoundWinnerCommand.cs" />
     <Compile Include="DAL\IColorsGameDataAccess.cs" />
     <Compile Include="DAL\IColorsGameDataBackQuery.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
