--- a/src/CasinovaAll/Modules/Colors/TheS.Casinova.Colors.Models/TheS.Casinova.Colors.Models.csproj
+++ b/src/CasinovaAll/Modules/Colors/TheS.Casinova.Colors.Models/TheS.Casinova.Colors.Models.csproj
@@ -40,7 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Models\BetInformation.cs" />
+    <Compile Include="Models\PlayerActionInformation.cs" />
     <Compile Include="Models\GamePlayInformation.cs" />
     <Compile Include="Models\GameRoundInformation.cs" />
     <Compile Include="Models\PlayerInformation.cs" />
